chore: prepare for mainnet deployment
- Update Cargo.toml with release profile optimizations for WASM size
- Update README with deployed Mainnet Contract ID and usage details
- Add .gitignore to exclude local check scripts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ soroban-env-macros = "22.0.7"
 
 [dev-dependencies]
 soroban-sdk-macros = "22.0.7"
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
